processor/src/test/resources/model/good/SimpleGenericStringModel.java
package com.bluelinelabs.logansquare.processor;

import com.bluelinelabs.logansquare.annotation.JsonField;
import com.bluelinelabs.logansquare.annotation.JsonObject;

import java.util.Date;

@JsonObject
public class SimpleGenericStringModel extends SimpleGenericModel<String> {

}
